WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91578
Fix null pointer dereference introduced by Changeset 121874.
https://bugs.webkit.org/show_bug.cgi?id=91578
Summary
Fix null pointer dereference introduced by Changeset 121874.
Luke Macpherson
Reported
2012-07-17 21:47:48 PDT
Fix null pointer dereference introduced by Changeset 121874.
Attachments
Patch
(2.01 KB, patch)
2012-07-17 22:23 PDT
,
Luke Macpherson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Luke Macpherson
Comment 1
2012-07-17 22:23:05 PDT
Created
attachment 152920
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-18 00:09:34 PDT
Comment on
attachment 152920
[details]
Patch Clearing flags on attachment: 152920 Committed
r122923
: <
http://trac.webkit.org/changeset/122923
>
WebKit Review Bot
Comment 3
2012-07-18 00:09:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug