Fix null pointer dereference introduced by Changeset 121874. https://bugs.webkit.org/show_bug.cgi?id=91578

Reviewed by Pavel Feldman.

In http://trac.webkit.org/changeset/121874/trunk/Source/WebCore/inspector/InspectorStyleSheet.cpp I introduced code that
dereferences the return value of ownerDocument() without doing a null check. This was a bad idea.

No new tests. I don't have a repro case, but it is clear from reading the code for ownerDocument() that it can return null.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheet::ensureSourceData):


Canonical link: https://commits.webkit.org/109381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122923 268f45cc-cd09-0410-ab3c-d52691b4dbfc